# patentforgelocal

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCUSSIONS-SEED.md  LEGAL_NOTICE.md  LICENSE-PROMPTS  PRD.md  PatentForge-Architecture.docx  PatentForge.bat  PatentForge.ps1  PatentForge.vbs  PatentForgeLocal-stop.ps1  PatentForgeLocal.bat  PatentForgeLocal.ps1  README.md  SECURITY.md  USER-MANUAL.md  V092-QA-RECHECK-CONTEXT.md  docker-compose.yml  v0.4-SCOPE.md
.claude/: e2e-final.js  e2e-final2.js  e2e-ui-test.js  e2e-ui-test2.js  e2e-ui-test3.js  launch.json
backend/: .dockerignore  Dockerfile  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
diagrams/: architecture.mmd  build-docx.js  data-flow.mmd  database-schema.mmd  docker-topology.mmd  generate.py  generate_diagrams.py  generate_pdf.py  user-journey.mmd
docs/: SUPERVISOR.md  (+2 more)
services/compliance-checker/: Dockerfile  pyproject.toml
services/compliance-checker/src/: cost.py  graph.py  llm_client.py  models.py  retry.py  server.py
services/compliance-checker/src/agents/: definiteness.py  eligibility.py  formalities.py  written_description.py
services/compliance-checker/src/prompts/: common-rules.md  definiteness.md  eligibility.md  formalities.md  written-description.md
services/compliance-checker/tests/: test_auth.py  test_cost.py  test_definiteness.py  test_eligibility.py  test_formalities.py  test_graph.py  test_llm_client.py  test_models.py  test_retry.py  test_server.py  test_stream.py  test_written_description.py
(+332 files in other folders)
